--- a/tests/test_cases/2020/command_support.yaml
+++ b/tests/test_cases/2020/command_support.yaml
@@ -40,3 +40,8 @@ supported_commands_by_ecu:
   - 0165:GEAR_RCMD,GEAR_SUP,GPL_STAT,GPL_SUP,N/D_STAT,N/D_SUP,N/G_STAT,N/G_SUP,PTO_STAT_AUX,PTO_SUP
   - 019A:EHEV_MODE,EHEV_MODE_SUP,HEV_BATT_A,HEV_BATT_A_SUP,HEV_BATT_V,HEV_BATT_V_SUP,HEV_MODE,HEV_MODE_SUP
   - 019D:FUEL_RATE_ALT,VFUEL_RATE
+unsupported_commands_by_ecu:
+  DB33:
+  - DB33.010D
+  - DB33.0131
+  - DB33.015B
