Updated command responses

--- a/tests/test_cases/2020/command_support.yaml
+++ b/tests/test_cases/2020/command_support.yaml
@@ -10,9 +10,12 @@ supported_commands_by_ecu:
   - 010A:FP
   - 010C:RPM
   - 010D:VSS
+  - 010E:SPARKADV
   - 010F:IAT
   - 0111:TP
+  - 0112:AIR_STAT
   - 011C:OBDSUP
+  - 011D:O2S11_EXISTS,O2S12_EXISTS,O2S21_EXISTS,O2S22_EXISTS,O2S31_EXISTS,O2S32_EXISTS,O2S41_EXISTS,O2S42_EXISTS
   - 011E:PTO_STAT
   - 011F:RUNTM
   - 0121:MIL_DIST
