--- a/tests/test_cases/2020/command_support.yaml
+++ b/tests/test_cases/2020/command_support.yaml
@@ -1,8 +1,8 @@
 model_year: 2020
 supported_commands_by_ecu:
-  743:
+  "743":
   - 743.220207:RENAULT_ODO
-  DB33:
+  "DB33":
   - 0101:ACRF_RDY,ACRF_SUP,AIR_RDY,AIR_SUP,CAT_RDY,CAT_SUP,CCM_RDY,CCM_SUP,CIM_SUP,DTC_CNT,EGR_RDY,EGR_SUP,EVAP_RDY,EVAP_SUP,FUEL_RDY,FUEL_SUP,HCAT_RDY,HCAT_SUP,HTR_RDY,HTR_SUP,MIL,MIS_RDY,MIS_SUP,O2S_RDY,O2S_SUP
   - 0102:DTCFRZF
   - 0104:LOAD_PCT
@@ -43,6 +43,8 @@ supported_commands_by_ecu:
   - 0165:GEAR_RCMD,GEAR_SUP,GPL_STAT,GPL_SUP,N/D_STAT,N/D_SUP,N/G_STAT,N/G_SUP,PTO_STAT_AUX,PTO_SUP
   - 019A:EHEV_MODE,EHEV_MODE_SUP,HEV_BATT_A,HEV_BATT_A_SUP,HEV_BATT_V,HEV_BATT_V_SUP,HEV_MODE,HEV_MODE_SUP
   - 019D:FUEL_RATE_ALT,VFUEL_RATE
+  - 01A2:CYL_RATE
+  - 01B2:BAT_SOH
   - DB33.010D:VSS
   - DB33.0131:CLR_DIST
   - DB33.015B:BAT_SOC
