--- a/tests/test_cases/2020/commands/DB33.0131.yaml
+++ b/tests/test_cases/2020/commands/DB33.0131.yaml
@@ -1,5 +1,5 @@
 command_id: DB33.0131
 test_cases:
-- response: 18DAF1DA0441310000
-  expected_values:
+- expected_values:
     CLR_DIST: 0
+  response: 18DAF1DA0441310000
