--- a/tests/test_cases/2020/commands/DB33.015B.yaml
+++ b/tests/test_cases/2020/commands/DB33.015B.yaml
@@ -1,31 +1,31 @@
 command_id: DB33.015B
 test_cases:
-- response: |-
-    18DAF1DA03415B84
-    18DAF1DB03415B82
-  expected_values:
+- expected_values:
+    BAT_SOC: 50.58824
+  response: 18DAF1DA03415B81
+- expected_values:
     BAT_SOC: 50.98039
-- response: 18DAF1DA03415B88
-  expected_values:
-    BAT_SOC: 53.33333
-- response: |-
+  response: |-
+    18DAF1DA03415B82
+    18DAF1DB03415B82
+- expected_values:
+    BAT_SOC: 94.90196
+  response: |-
     18DAF1DA03415BF4
     18DAF1DB03415BF2
-  expected_values:
-    BAT_SOC: 94.90196
-- response: |-
+- expected_values:
+    BAT_SOC: 39.21569
+  response: |-
     18DAF1DB03415B63
     18DAF1DA03415B64
-  expected_values:
-    BAT_SOC: 39.21569
-- response: 18DAF1DB03415B68
-  expected_values:
+- expected_values:
     BAT_SOC: 40.78431
-- response: 18DAF1DB03415BF7
-  expected_values:
-    BAT_SOC: 96.86275
-- response: |-
-    18DAF1DB03415BF7
-    18DAF1DA03415BF7
-  expected_values:
-    BAT_SOC: 96.86275
+  response: 18DAF1DB03415B68
+- expected_values:
+    BAT_SOC: 97.64706
+  response: 18DAF1DB03415BF9
+- expected_values:
+    BAT_SOC: 99.21569
+  response: |-
+    18DAF1DB03415BFC
+    18DAF1DA03415BFD
