--- a/tests/test_cases/2021/command_support.yaml
+++ b/tests/test_cases/2021/command_support.yaml
@@ -1,21 +1,17 @@
-model_year: 2020
+model_year: 2021
 supported_commands_by_ecu:
   "743":
   - 743.220207:RENAULT_ODO
   "DB33":
   - 0101:ACRF_RDY,ACRF_SUP,AIR_RDY,AIR_SUP,CAT_RDY,CAT_SUP,CCM_RDY,CCM_SUP,CIM_SUP,DTC_CNT,EGR_RDY,EGR_SUP,EVAP_RDY,EVAP_SUP,FUEL_RDY,FUEL_SUP,HCAT_RDY,HCAT_SUP,HTR_RDY,HTR_SUP,MIL,MIS_RDY,MIS_SUP,O2S_RDY,O2S_SUP
-  - 0102:DTCFRZF
   - 0104:LOAD_PCT
   - 0105:ECT
   - 010A:FP
   - 010C:RPM
   - 010D:VSS
-  - 010E:SPARKADV
   - 010F:IAT
   - 0111:TP
-  - 0112:AIR_STAT
   - 011C:OBDSUP
-  - 011D:O2S11_EXISTS,O2S12_EXISTS,O2S21_EXISTS,O2S22_EXISTS,O2S31_EXISTS,O2S32_EXISTS,O2S41_EXISTS,O2S42_EXISTS
   - 011E:PTO_STAT
   - 011F:RUNTM
   - 0121:MIL_DIST
@@ -43,10 +39,18 @@ supported_commands_by_ecu:
   - 0165:GEAR_RCMD,GEAR_SUP,GPL_STAT,GPL_SUP,N/D_STAT,N/D_SUP,N/G_STAT,N/G_SUP,PTO_STAT_AUX,PTO_SUP
   - 019A:EHEV_MODE,EHEV_MODE_SUP,HEV_BATT_A,HEV_BATT_A_SUP,HEV_BATT_V,HEV_BATT_V_SUP,HEV_MODE,HEV_MODE_SUP
   - 019D:FUEL_RATE_ALT,VFUEL_RATE
-  - 01A2:CYL_RATE
-  - 01B2:BAT_SOH
+  - DB33.0101:ACRF_RDY,ACRF_SUP,AIR_RDY,AIR_SUP,CAT_RDY,CAT_SUP,CCM_RDY,CCM_SUP,CIM_SUP,DTC_CNT,EGR_RDY,EGR_SUP,EVAP_RDY,EVAP_SUP,FUEL_RDY,FUEL_SUP,HCAT_RDY,HCAT_SUP,HTR_RDY,HTR_SUP,MIL,MIS_RDY,MIS_SUP,O2S_RDY,O2S_SUP
   - DB33.010D:VSS
+  - DB33.011C:OBDSUP
+  - DB33.011F:RUNTM
+  - DB33.0121:MIL_DIST
+  - DB33.0130:WARM_UPS
   - DB33.0131:CLR_DIST
   - DB33.0142:VPWR
+  - DB33.0146:AAT
+  - DB33.014D:MIL_TIME
+  - DB33.014E:CLR_TIME
+  - DB33.0152:ALCH_PCT
   - DB33.015B:BAT_SOC
   - DB33.019A:EHEV_MODE,EHEV_MODE_SUP,HEV_BATT_A,HEV_BATT_A_SUP,HEV_BATT_V,HEV_BATT_V_SUP,HEV_MODE,HEV_MODE_SUP
+  - DB33.019D:FUEL_RATE_ALT,VFUEL_RATE
