--- a/tests/test_cases/2020/command_support.yaml
+++ b/tests/test_cases/2020/command_support.yaml
@@ -45,8 +45,35 @@ supported_commands_by_ecu:
   - 019D:FUEL_RATE_ALT,VFUEL_RATE
   - 01A2:CYL_RATE
   - 01B2:BAT_SOH
+  - DB33.0101:ACRF_RDY,ACRF_SUP,AIR_RDY,AIR_SUP,CAT_RDY,CAT_SUP,CCM_RDY,CCM_SUP,CIM_SUP,DTC_CNT,EGR_RDY,EGR_SUP,EVAP_RDY,EVAP_SUP,FUEL_RDY,FUEL_SUP,HCAT_RDY,HCAT_SUP,HTR_RDY,HTR_SUP,MIL,MIS_RDY,MIS_SUP,O2S_RDY,O2S_SUP
+  - DB33.0104:LOAD_PCT
+  - DB33.0105:ECT
+  - DB33.010A:FP
+  - DB33.010C:RPM
   - DB33.010D:VSS
+  - DB33.010F:IAT
+  - DB33.0111:TP
+  - DB33.011E:PTO_STAT
+  - DB33.0121:MIL_DIST
+  - DB33.0122:FRP_REL
+  - DB33.0123:FRP
+  - DB33.0130:WARM_UPS
   - DB33.0131:CLR_DIST
+  - DB33.0133:BARO
   - DB33.0142:VPWR
+  - DB33.0143:LOAD_ABS
+  - DB33.0145:TP_R
+  - DB33.0146:AAT
+  - DB33.0147:TP_B
+  - DB33.0149:APP_D
+  - DB33.014A:APP_E
+  - DB33.014D:MIL_TIME
+  - DB33.014E:CLR_TIME
+  - DB33.0151:FUEL_TYP
+  - DB33.0152:ALCH_PCT
+  - DB33.0153:EVAP_VPA
+  - DB33.0159:FRP_ABS
   - DB33.015B:BAT_SOC
+  - DB33.015C:EOT
   - DB33.019A:EHEV_MODE,EHEV_MODE_SUP,HEV_BATT_A,HEV_BATT_A_SUP,HEV_BATT_V,HEV_BATT_V_SUP,HEV_MODE,HEV_MODE_SUP
+  - DB33.019D:FUEL_RATE_ALT,VFUEL_RATE
