--- a/tests/test_cases/2020/commands/DB33.019A.yaml
+++ b/tests/test_cases/2020/commands/DB33.019A.yaml
@@ -3,6 +3,34 @@ test_cases:
 - expected_values:
     EHEV_MODE: CSM
     EHEV_MODE_SUP: 0
+    HEV_BATT_A: -2.2
+    HEV_BATT_A_SUP: 1
+    HEV_BATT_V: 395.79688
+    HEV_BATT_V_SUP: 1
+    HEV_MODE: CSM
+    HEV_MODE_SUP: 1
+  response: |-
+    18DAF1DA1008419A070062F3
+    18DAF1DB1008419AF7280040
+    18DAF1DB219330AAAAAAAAAA
+    18DAF1DA21FFEAAAAAAAAAAA
+- expected_values:
+    EHEV_MODE: CSM
+    EHEV_MODE_SUP: 0
+    HEV_BATT_A: -2.6
+    HEV_BATT_A_SUP: 1
+    HEV_BATT_V: 395.79688
+    HEV_BATT_V_SUP: 1
+    HEV_MODE: CSM
+    HEV_MODE_SUP: 1
+  response: |-
+    18DAF1DB1008419A00000040
+    18DAF1DA1008419A070062F3
+    18DAF1DB219330AAAAAAAAAA
+    18DAF1DA21FFE6AAAAAAAAAA
+- expected_values:
+    EHEV_MODE: CSM
+    EHEV_MODE_SUP: 0
     HEV_BATT_A: -1.4
     HEV_BATT_A_SUP: 1
     HEV_BATT_V: 389.79688
