Update command data for Renault/Zoe

--- a/tests/test_cases/2020/commands/DB33.0104.yaml
+++ b/tests/test_cases/2020/commands/DB33.0104.yaml
@@ -2,6 +2,17 @@ command_id: DB33.0104
 test_cases:
 - expected_values:
     LOAD_PCT: 0
+  response: 18DAF1DA03410400
+- expected_values:
+    LOAD_PCT: 0
   response: |-
     18DAF1DA03410400
     18DAF1DB03410400
+- expected_values:
+    LOAD_PCT: 0
+  response: 18DAF1DB03410400
+- expected_values:
+    LOAD_PCT: 0
+  response: |-
+    18DAF1DB03410400
+    18DAF1DA03410400
