Update command data for Renault/Zoe

--- a/tests/test_cases/2021/commands/DB33.015B.yaml
+++ b/tests/test_cases/2021/commands/DB33.015B.yaml
@@ -25,7 +25,12 @@ test_cases:
     BAT_SOC: 57.64706
   response: 18DAF1DB03415B93
 - expected_values:
-    BAT_SOC: 58.82353
+    BAT_SOC: 84.70588
   response: |-
-    18DAF1DB03415B93
-    18DAF1DA03415B96
+    18DAF1DB03415BD6
+    18DAF1DA03415BD8
+- expected_values:
+    BAT_SOC: 85.09804
+  response: |-
+    18DAF1DB03415BD8
+    18DAF1DA03415BD9
