--- a/tests/test_cases/2021/command_support.yaml
+++ b/tests/test_cases/2021/command_support.yaml
@@ -40,6 +40,8 @@ supported_commands_by_ecu:
   - 019A:EHEV_MODE,EHEV_MODE_SUP,HEV_BATT_A,HEV_BATT_A_SUP,HEV_BATT_V,HEV_BATT_V_SUP,HEV_MODE,HEV_MODE_SUP
   - 019D:FUEL_RATE_ALT,VFUEL_RATE
   - DB33.0101:ACRF_RDY,ACRF_SUP,AIR_RDY,AIR_SUP,CAT_RDY,CAT_SUP,CCM_RDY,CCM_SUP,CIM_SUP,DTC_CNT,EGR_RDY,EGR_SUP,EVAP_RDY,EVAP_SUP,FUEL_RDY,FUEL_SUP,HCAT_RDY,HCAT_SUP,HTR_RDY,HTR_SUP,MIL,MIS_RDY,MIS_SUP,O2S_RDY,O2S_SUP
+  - DB33.0104:LOAD_PCT
+  - DB33.0105:ECT
   - DB33.010D:VSS
   - DB33.011C:OBDSUP
   - DB33.011F:RUNTM
@@ -52,5 +54,6 @@ supported_commands_by_ecu:
   - DB33.014E:CLR_TIME
   - DB33.0152:ALCH_PCT
   - DB33.015B:BAT_SOC
+  - DB33.015C:EOT
   - DB33.019A:EHEV_MODE,EHEV_MODE_SUP,HEV_BATT_A,HEV_BATT_A_SUP,HEV_BATT_V,HEV_BATT_V_SUP,HEV_MODE,HEV_MODE_SUP
   - DB33.019D:FUEL_RATE_ALT,VFUEL_RATE
