--- a/tests/test_cases/2021/commands/DB33.010D.yaml
+++ b/tests/test_cases/2021/commands/DB33.010D.yaml
@@ -9,6 +9,11 @@ test_cases:
     VSS: 0
   response: 18DAF1DA03410D00
 - expected_values:
+    VSS: 17
+  response: |-
+    18DAF1DA03410D00
+    18DAF1DB03410D11
+- expected_values:
     VSS: 0
   response: 18DAF1DB03410D00
 - expected_values:
