--- a/tests/test_cases/2021/commands/DB33.0104.yaml
+++ b/tests/test_cases/2021/commands/DB33.0104.yaml
@@ -3,5 +3,10 @@ test_cases:
 - expected_values:
     LOAD_PCT: 0
   response: |-
+    18DAF1DA03410400
+    18DAF1DB03410400
+- expected_values:
+    LOAD_PCT: 0
+  response: |-
     18DAF1DB03410400
     18DAF1DA03410400
