Update command data for Renault/Zoe

--- a/tests/test_cases/2021/command_support.yaml
+++ b/tests/test_cases/2021/command_support.yaml
@@ -43,6 +43,7 @@ supported_commands_by_ecu:
   - DB33.0104:LOAD_PCT
   - DB33.0105:ECT
   - DB33.010D:VSS
+  - DB33.0111:TP
   - DB33.011C:OBDSUP
   - DB33.011F:RUNTM
   - DB33.0121:MIL_DIST
@@ -50,6 +51,7 @@ supported_commands_by_ecu:
   - DB33.0131:CLR_DIST
   - DB33.0142:VPWR
   - DB33.0146:AAT
+  - DB33.0147:TP_B
   - DB33.014D:MIL_TIME
   - DB33.014E:CLR_TIME
   - DB33.0152:ALCH_PCT
@@ -57,3 +59,115 @@ supported_commands_by_ecu:
   - DB33.015C:EOT
   - DB33.019A:EHEV_MODE,EHEV_MODE_SUP,HEV_BATT_A,HEV_BATT_A_SUP,HEV_BATT_V,HEV_BATT_V_SUP,HEV_MODE,HEV_MODE_SUP
   - DB33.019D:FUEL_RATE_ALT,VFUEL_RATE
+unsupported_commands_by_ecu:
+  "748":
+  - 748.223001:RENAULT_12V_BAT_V
+  - 748.223005:RENAULT_2WD_MODE_SW,RENAULT_4WD_MODE_SW,RENAULT_AUTO_MODE_SW
+  - 748.223006:RENAULT_FL_VSS,RENAULT_FR_VSS,RENAULT_RL_VSS,RENAULT_RR_VSS
+  - 748.223008:RENAULT_VSS_TC
+  - 748.22300A:RENAULT_ACCEL_POS_TC
+  - 748.22300D:RENAULT_MOTOR_STS_TC
+  - 748.223010:RENAULT_ENGINE_TORQUE_CTRL,RENAULT_TRACTION_CTRL,RENAULT_TRAJECTORY_CTRL
+  - 748.223011:RENAULT_COUPLER,RENAULT_ENGINE_TORQUE_REF,RENAULT_TORQUE_SETPT_PROG
+  - 748.223020:RENAULT_CLUTCH_T
+  - 748.223022:RENAULT_TRANS_MODE_BTN_POS
+  - 748.223023:RENAULT_OP_MODE_SEL
+  - 748.223024:RENAULT_4WD_MODE_MON,RENAULT_WARNING_LIGHT
+  - 748.223025:RENAULT_TORQUE_REQ
+  - 748.223026:RENAULT_OP_MODE
+  - 748.22302C:RENAULT_TORQUE_APPLIED
+  - 748.22302D:RENAULT_INT_FAULT_CODE
+  - 748.223043:RENAULT_SPEEDO_INDEX
+  - 748.223050:RENAULT_GEARBOX_TYPE
+  "7E0":
+  - 7E0.222001:RENAULT_ECT
+  - 7E0.222003:RENAULT_VSS
+  - 7E0.222004:RENAULT_ENGINE_TORQUE
+  - 7E0.222005:RENAULT_ECU_SUPPLY_V
+  - 7E0.222007:RENAULT_EST_OIL_T
+  - 7E0.22200B:RENAULT_ACCEL_POT_V1
+  - 7E0.22200C:RENAULT_ACCEL_POT_V2
+  - 7E0.22200D:RENAULT_REFRIG_P_SNS_V
+  - 7E0.22200E:RENAULT_ECU_POST_IGN
+  - 7E0.22200F:RENAULT_BRAKE_MUX_SIG
+  - 7E0.222010:RENAULT_MOTOR_STS
+  - 7E0.222014:RENAULT_CAM_TDC_SYNC
+  - 7E0.222016:RENAULT_CRANK_SYNC
+  - 7E0.22201E:RENAULT_AC_COMP
+  - 7E0.222021:RENAULT_SNS_FEED_V1
+  - 7E0.222022:RENAULT_SNS_FEED_V2
+  - 7E0.222025:RENAULT_BRAKE_PEDAL
+  - 7E0.222026:RENAULT_WIRED_BRAKE_CONTACT
+  - 7E0.222028:RENAULT_OBD_LIGHT_REQ
+  - 7E0.22202E:RENAULT_ACCEL_POS
+  - 7E0.222030:RENAULT_IN_CAM_DEPHASER_SETPT
+  - 7E0.222031:RENAULT_IN_CAM_DEPHASING
+  - 7E0.222033:RENAULT_IN_CAM_DEPHASER_OCR
+  - 7E0.222036:RENAULT_ACCEL_DETECT_BLOCKED
+  - 7E0.222047:RENAULT_FIRST_START
+  - 7E0.22204A:RENAULT_FAN_HI_SPD
+  - 7E0.222057:RENAULT_ALT_PWR
+  - 7E0.222059:RENAULT_CLUTCH_TRAVEL_SW
+  - 7E0.22206A:RENAULT_BRAKE_CONTACT_1_DUR
+  - 7E0.22206B:RENAULT_BRAKE_CONTACT_2_DUR
+  - 7E0.22206D:RENAULT_CLUTCH_CONTACT_WIRE
+  - 7E0.222099:RENAULT_ALT_LOAD
+  - 7E0.22209A:RENAULT_IDLE_ADAPT_CORR
+  - 7E0.22210E:RENAULT_ENGINE_ROT_COUNT
+  - 7E0.222156:RENAULT_TORQUEMETER_PROG
+  - 7E0.22215B:RENAULT_FLYWHEEL_TGT_PROG
+  - 7E0.22215D:RENAULT_TORQUEMETER_ADAPT_CORR
+  - 7E0.222161:RENAULT_TDC_SNS_SIG
+  - 7E0.222162:RENAULT_CRANK_SYNC_LOSS_CNT
+  - 7E0.22218D:RENAULT_HEAT_RESISTOR_CNT
+  - 7E0.22222A:RENAULT_REFRIG_P
+  - 7E0.22222D:RENAULT_CLUTCH_PEDAL_SW
+  - 7E0.222241:RENAULT_IN_CAM_DEPHASER_SOL_PROG
+  - 7E0.222246:RENAULT_IDLE_REG_INT_CORR
+  - 7E0.222401:RENAULT_BOOST_P
+  - 7E0.22240B:RENAULT_MANIFOLD_P
+  - 7E0.222414:RENAULT_THROTTLE_POS_REF
+  - 7E0.222415:RENAULT_THROTTLE_POS_1
+  - 7E0.222416:RENAULT_THROTTLE_POS_2
+  - 7E0.222418:RENAULT_THROTTLE_V1
+  - 7E0.222419:RENAULT_THROTTLE_V2
+  - 7E0.22242F:RENAULT_THROTTLE_POS
+  - 7E0.22243F:RENAULT_INLET_AIR_T
+  - 7E0.222449:RENAULT_O2_UP_V
+  - 7E0.22244A:RENAULT_O2_DN_V
+  - 7E0.22244B:RENAULT_O2_UP_HEAT_R
+  - 7E0.22244C:RENAULT_O2_DN_HEAT_R
+  - 7E0.222457:RENAULT_THROTTLE_LOW_STOP_PROG
+  - 7E0.22245D:RENAULT_THROTTLE_LIMITS_PROG
+  - 7E0.222493:RENAULT_TEST_RESULT_1
+  - 7E0.222494:RENAULT_TEST_RESULT_2
+  - 7E0.2224C4:RENAULT_O2_UP_HEAT_DELAY
+  - 7E0.2224C9:RENAULT_THROTTLE_SAFE_MODE_PROG
+  - 7E0.2224D7:RENAULT_MANIFOLD_P_LIN
+  - 7E0.222807:RENAULT_IGN_TIMING_ADV
+  - 7E0.22281B:RENAULT_LOW_FUEL
+  - 7E0.22281C:RENAULT_FUEL_PUMP_CTRL
+  - 7E0.222822:RENAULT_CANISTER_BLEED_SOL_RCO
+  - 7E0.222841:RENAULT_CYL1_MISFIRE_CNT
+  - 7E0.222842:RENAULT_CYL2_MISFIRE_CNT
+  - 7E0.222843:RENAULT_CYL3_MISFIRE_CNT
+  - 7E0.222844:RENAULT_CYL4_MISFIRE_CNT
+  - 7E0.222847:RENAULT_CYL1_KNOCK
+  - 7E0.222848:RENAULT_CYL2_KNOCK
+  - 7E0.222849:RENAULT_CYL3_KNOCK
+  - 7E0.22284A:RENAULT_CYL4_KNOCK
+  - 7E0.22284D:RENAULT_KNOCK_AVG
+  - 7E0.22284E:RENAULT_RICHNESS_CORR
+  - 7E0.222850:RENAULT_RICHNESS_CORR_OP
+  - 7E0.222851:RENAULT_RICHNESS_REG_GAIN
+  - 7E0.222852:RENAULT_RICHNESS_REG_OFFSET
+  - 7E0.222873:RENAULT_RICHNESS_ADAPT
+  - 7E0.222874:RENAULT_MISFIRE_CNT
+  - 7E0.222881:RENAULT_FLI_EST
+  - 7E0.2228B1:RENAULT_GAS_T
+  - 7E0.222C03:RENAULT_GEARBOX_RATIO_TGT
+  - 7E0.222C04:RENAULT_GEARBOX_RATIO
+  - 7E0.22F423:RENAULT_LPG_P
+  - 7E0.22FD81:RENAULT_MANIFOLD_P_SNS_V
+  - 7E0.22FD83:RENAULT_AIR_INLET_T_SNS_V
+  - 7E0.22FD8B:RENAULT_COOLANT_T_SNS_V
